--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -53,7 +53,7 @@ body {
   color:#373737;
   background: #212121;
   font-size: 16px;
-  font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -62,19 +62,24 @@ h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
   color:#222222;
-  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
   letter-spacing: -1px;
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 48px;
   font-weight: 700;
+  font-family: 'Raleway Dots', cursive;
 }
 
 h2 {
   padding-bottom: 10px;
   font-size: 32px;
   background: url('../images/bg_hr.png') repeat-x bottom;
+  font-family: 'Iceland', cursive;
+}
+
+h1, h2, h3, h4, h5, h6 {
+ font-family: 'Iceland', cursive;
 }
 
 h3 {
@@ -83,6 +88,7 @@ h3 {
 
 h4 {
   font-size: 21px;
+  
 }
 
 h5 {
@@ -287,12 +293,12 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
+  background: #01DF01;
+  background: -moz-linear-gradient(top, #01DF01, #00FF00);
+  background: -webkit-linear-gradient(top, #01DF01, #00FF00);
+  background: -ms-linear-gradient(top, #01DF01, #00FF00);
+  background: -o-linear-gradient(top, #01DF01, #00FF00);
+  background: linear-gradient(top, #01DF01, #00FF00);
 }
 
 #header_wrap .inner {
