font selections, colors, etc

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -68,11 +68,11 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 48px;
   font-weight: 700;
-  font-family: 'Raleway Dots', cursive;
+   font-family: 'Offside', cursive;
 }
 
 h2 {
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   font-size: 32px;
   background: url('../images/bg_hr.png') repeat-x bottom;
   font-family: 'Iceland', cursive;
@@ -308,17 +308,26 @@ Full-Width Styles
 #project_title {
   margin: 0;
   color: #fff;
-  font-size: 42px;
+  font-size: 48px;
   font-weight: 700;
   text-shadow: #111 0px 0px 10px;
 }
 
 #project_tagline {
   color: #fff;
-  font-size: 24px;
+  font-size: 32px;
   font-weight: 300;
   background: none;
   text-shadow: #111 0px 0px 10px;
+}
+
+#project_iconline {
+  color: #006400;
+  font-size: 32px;
+  font-weight: 300;
+  background: none;
+  letter-spacing: 30px;
+  text-shadow: #111 0px 0px 2px;
 }
 
 #downloads {
