update config to elo stuff, delete extraneous files

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,7 @@
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">{{ site.tagline }}</span>
                     </div>
                 </div>
             </div>
