--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,10 +19,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#passions">Passions</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#services">Services</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#team">Team</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -39,10 +42,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/skyline.png" alt="skyline-picture">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
-                        <hr class="star-light">
+                        <hr class="flask-light">
                         <span class="skills">{{ site.tagline }}</span>
                     </div>
                 </div>
