--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,11 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include portfolio_grid.html %}
-    {% include about.html %}
+    {% include passions.html %}
+    {% include services.html %}
+    {% include team.html %}
     {% include contact.html %}
     {% include footer.html %}
-    {% include modals.html %}
     {% include js.html %}
 
     </body>
