--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-					Please contact me the old fashioned way with an <a href="mailto:easall@gmail.com">old-school email</a>
+			Please contact me the old fashioned way with an old-school email: <kbd>easall [at] gmail</kbd>
                 </div>
             </div>
         </div>
