Fix linked in link

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -16,7 +16,7 @@
                       <img class="img-responsive" src={{ person.photo }} alt="">
                     </div>
                     <div class="col-lg-3">
-                      <h2 ><a href="http://www.linkedin.com/pub/elizabeth-sall">{{ person.name }}</a></h2>
+                      <h2 ><a href="https://www.linkedin.com/in/elizabeth-sall-207a851">{{ person.name }}</a></h2>
                     </div>
                   </div>
               </div>
