--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -5,10 +5,11 @@
 
 
     <body id="page-top" class="index">
-
+    {% include nav.html %}
     {% include header.html %}
     {% include passions.html %}
     {% include services.html %}
+    {% include clients.html %}
     {% include team.html %}
     {% include contact.html %}
     {% include footer.html %}
