--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -56,9 +56,27 @@
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6">
+                            
                             <div class="service-item">
-                                <img src="img/clients/sandiego.png" class="img-responsive center-block" alt="hi">
-                                    <h5><strong>San Diego Association of Governments</strong></h5>
+                            <a href="http://calitp.org">
+                                <img src="img/clients/catransit.png" class="img-responsive center-block" alt="hi"></a>
+                                <h5><strong>CALSta California Integrated Travel Project</strong></h5>
+                            </div>
+                        </div>
+                         <div class="col-md-4 col-sm-6">
+                            
+                            <div class="service-item">
+                            <a href="https://github.com/wsp-sag/network_wrangler">
+                                <img src="img/clients/msp.png" class="img-responsive center-block" alt="hi"></a>
+                                <h5><strong>Metropolitan Council</strong></h5>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                           
+                            <div class="service-item">
+                             <a href="https://apps.trb.org/cmsfeed/TRBNetProjectDisplay.asp?ProjectID=4186">
+                                <img src="img/clients/washington.png" class="img-responsive center-block" alt="hi"></a>
+                                <h5><strong>NCHRP 08-110 Forecast Accuracy</strong></h5>
                             </div>
                         </div>
                     </div>
