--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -32,9 +32,7 @@
                 <div class="panel panel-default">
                   <div class="panel-heading" role="tab" id="heading-employment-{{e.id}}">
                     <h4 class="panel-title">
-                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse-employment-{{e.id}}" aria-expanded="false" aria-controls="collapse-employment-{{e.id}}">
                         <h4>{{ e.years}}: {{ e.title }}</h4>
-                      </a>
                         <h6>
                           <a href={{ e.link }} style="color: gray;">{{ e.institution }}</a>
                         </h6>
@@ -133,13 +131,11 @@
               <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="heading-ser-{{s.id}}">
                   <h4 class="panel-title">
-                      <a href={{ s.link }}>{{ s.institution }}</a>
-                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse-ser-{{s.id}}" aria-expanded="false" aria-controls="collapse-ser-{{s.id}}">
-                      <h6>>> Read more</h6>
-                    </a>
+                      {{ s.institution }}
                   </h4>
+                  
                 </div>
-                <div id="collapse-ser-{{s.id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-ser-{{s.id}}">
+                <div id="collapse-ser-{{s.id}}" role="tabpanel" aria-labelledby="heading-ser-{{s.id}}">
                   <div class="panel-body">
                     {{ s.role }}
                   </div>
