Update Services Img+Text

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -6,33 +6,127 @@
                     <h2>Services</h2>
                     <hr class="star-primary">
                 </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>I thrive on projects which provide clear value to planet and the people it supports –<br>And 
+                        where I can provide clear value to the project. My projects range from small one-off activities to
+                        leading complex, multi-year projects. 
+                    </p>
+                    </div>
             </div>
             <div class="row">
 
                     <div class="col-sm-4 services-item">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <h4>Technical Strategic<br> Planning</h4>
+                                    <h4>Technical Strategic<br> Planning <br>+ Leadership</h4>
                                 </div>
                             </div>
-                            <img src="img/services/fencegobble.jpg" class="img-responsive" alt="hi">
+                            <img src="img/services/GasWorks.png" class="img-responsive" style="width: 400px; height: 250px;" alt="Gas Works Park overlooking seattle skyline">
                     </div>
                     <div class="col-sm-4 services-item">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <h4>Development of Technical<br>Backing for Policy</h4>
+                                    <h4>Technical<br>Policy Analysis<br>+ Development</h4>
                                 </div>
                             </div>
-                            <img src="img/services/lonebike.jpg" class="img-responsive" alt="hi">
-                    </div>
+                            <img src="img/services/iceland-rd.png" class="img-responsive" style="width:400px; height: 250px;" alt="Iceland street with rainbow painted on the asphalt and bicycle gate">
+                           
+                        </div>
+                        
                     <div class="col-sm-4 services-item">
+    
                             <div class="caption">
                                 <div class="caption-content">
-                                    <h4>Technical Evaluation<br>and Guidance</h4>
+                                    <h4>Technical Evaluation<br>+ Guidance</h4>
                                 </div>
                             </div>
-                            <img src="img/services/wall-vines.jpg" class="img-responsive" alt="hi">
+                            <img src="img/services/ubahn.png" class="img-responsive" style="width: 400px; height: 250px;" alt="Ubahn train at station with bicycle cars and pictoral signage.">
                     </div>
             </div>
+            <div class="row">
+
+                <div class="col-sm-4">
+                    <h4 style="text-align:center;">Such as</h4>
+                    <p>> Lead the Mobility Service Data Team for the <a style="color: grey;"href="https://calitp.org">California Integrated Travel Project</a> – 
+                                Focused on getting transit providers and customers 'the information they deserve'.
+                    </p>
+                    <p>> Initiated and work on the <a style="color: grey;"href="https://interoperablemobility.org">Mobility Data Interoperability Principles</a>, 
+                                a collaborativly-developed, industry-agreed upon vision, definition and direction for achieving interoperability in mobility with over 
+                                60 significant public- and private-signatories.
+                    </p>
+                </div>
+                <div class="col-sm-4">
+                    <h4 style="text-align:center;">As in</h4>
+                        <p>> Evaluated current policy and develop approach to Transit Traveller 
+                                Information on behalf of the <a style="color: grey;"href="https://calitp.org">California Integrated Travel Project</a>.
+                        </p>
+                        <p>> Appointed to and serve on the National Academies 
+                                <a style="color: grey;"href="https://www8.nationalacademies.org/pa/projectview.aspx?key=52513">
+                                Committee for Data, Metrics, and Analytic Methods for Assessing Equity Impacts of Surface 
+                                 Transportation Funding Programs</a> which will provide advice to US DOT measuring the equity
+                                 impact of surface transportation funding programs in support of 
+                                 <a style="color: grey;"href=
+                                 "https://www.whitehouse.gov/briefing-room/presidential-actions/2021/01/20/executive-order-advancing-racial-equity-and-support-for-underserved-communities-through-the-federal-government/">
+                                 Executive Order 13985</a>
+                        </p>
+                        
+                    </p>
+                </div>
+                <div class="col-sm-4">
+                    <h4 style="text-align:center;">For Example</h4>
+                    <p>> Serve on Peer Review Panels for FHWA, APTA, and Technical Advisory Committees for specific projects.
+                    </p>
+                    <p>> Participate in the review and evaluation of many implementation activities of 
+                        <a style="color: grey;" 
+                        href="https://leginfo.legislature.ca.gov/faces/billNavClient.xhtml?bill_id=201320140SB743">
+                    California's SB743</a> - the California law to replace Auto Level-of-Service  (LOS)
+                        as a measure of environmental impact. 
+                    </p>
+                    <p>> Developed a clear bar for transit data quality
+                     with the <a style="color: grey;" 
+                    href="https://dot.ca.gov/cal-itp/california-minimum-general-transit-feed-specification-gtfs-guidelines">
+                    California Minimum Transit Data Guidelines</a> as part of Cal-ITP. 
+                    </p>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h4 style="text-align:center;">Also</h4>
+                    <p>I also work on a variety of open-source software projects and open standards, 
+                        which support more effective and efficient travel analysis at public agencies.  I enjoy serving on these
+                        projects in a variety of roles including Technical Lead, Product Manager, Advisor, User Advocate,
+                        Client Stakeholder, and Developer - with experience each role helping me better serve in another.
+                    <p>These projects include:</p>
+                    <ul>
+                        <li>
+                            <a style="color: grey;" href="https://github.org/wsp-sag/network_wrangler">Network Wrangler</a>
+                        </li>
+                        <li>
+                            <a style="color: grey;" href="https://www.activitySim.org/">ActivitySim</a>
+                        </li>
+                        <li>
+                            <a style="color: grey;" href="https://www.gtfs.org/">General Transit Feed Specification (GTFS)</a>
+                        </li>
+                        <li>
+                            <a style="color: grey;" href="https://github.com/BayAreaMetro/tm2py/">Travel Model Two</a>
+                        </li>
+                        <li>
+                            <a style="color: grey;" href="https://github.com/cal-itp/operational-data-standard">Transit Operational Data Standard (ODS)</a>
+                        </li>
+                        <li>
+                            <a style="color: grey;" href="https://github.com/Fast-Trips">Fast-Trips Transit Assignment</a>
+                        </li>
+                        <li>
+                            <a style="color: grey;" href="https://groups.google.com/g/tidesproject/">Transit ITS Data Exchanges Specification (TIDES)</a>
+                        </li>
+                        <li>
+                            <a style="color: grey;" href="https://github.com/zephyr-data-specs/GMNS">General Modeling Network Specification (GMNS)</a>
+                        </li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
+
         </div>
     </section>
