--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-			Please contact me the old fashioned way with an old-school email: <kbd>easall [at] gmail</kbd>
+			Please contact me the old fashioned way with an old-school email: <kbd>elizabeth [at] urbanlabs.io</kbd>
                 </div>
             </div>
         </div>
