--- a/_includes/services.html
+++ b/_includes/services.html
@@ -96,7 +96,7 @@
                     <p>I also work on a variety of open-source software projects and open standards, 
                         which support more effective and efficient travel analysis at public agencies.  I enjoy serving on these
                         projects in a variety of roles including Technical Lead, Product Manager, Advisor, User Advocate,
-                        Client Stakeholder, and Developer - with experience each role helping me better serve in another.
+                        Client Stakeholder, and Developer - with experience in each role helping me better serve in another.
                     <p>These projects include:</p>
                     <ul>
                         <li>
