--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -60,9 +60,12 @@
                             <div class="service-item">
                             <a href="http://calitp.org">
                                 <img src="img/clients/catransit.png" class="img-responsive center-block" alt="hi"></a>
-                                <h5><strong>CALSta California Integrated Travel Project</strong></h5>
+                                <h5><strong>California Integrated Travel Project (Cal-ITP)</strong></h5>
                             </div>
                         </div>
+                    </div>
+                    <!-- /.row (nested) -->
+                    <div class="row">
                          <div class="col-md-4 col-sm-6">
                             
                             <div class="service-item">
@@ -76,10 +79,43 @@
                             <div class="service-item">
                              <a href="https://apps.trb.org/cmsfeed/TRBNetProjectDisplay.asp?ProjectID=4186">
                                 <img src="img/clients/washington.png" class="img-responsive center-block" alt="hi"></a>
-                                <h5><strong>NCHRP 08-110 Forecast Accuracy</strong></h5>
+                                <h5><strong>National Cooperative Highway Research Program (NCHRP)</strong></h5>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="service-item">
+                             <a href="https://dot.ca.gov/">
+                                <img src="img/clients/sacramento.png" class="img-responsive center-block" alt="hi"></a>
+                                <h5><strong>Caltrans</strong></h5>
                             </div>
                         </div>
                     </div>
+                    <!-- /.row (nested) -->
+                    <div class="row">
+                        <div class="col-md-4 col-sm-6">
+                            <div class="service-item">
+                             <a href="https://www.apta.com/">
+                                <img src="img/clients/metrotransit.png" class="img-responsive center-block" alt="hi"></a>
+                                <h5><strong>American Public Transportation Association</strong></h5>
+                            </div>
+                        </div>
+                    
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item">
+                         <a href="https://calact.org/">
+                            <img src="img/clients/bigsur.png" class="img-responsive center-block" alt="hi"></a>
+                            <h5><strong>California Association for Coordinated Transportation</strong></h5>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item">
+                         <a href="https://www.ucdavis.edu/">
+                            <img src="img/clients/highways.png" class="img-responsive center-block" alt="hi"></a>
+                            <h5><strong>University of California Davis</strong></h5>
+                        </div>
+                    </div>
+
+                </div>
                     <!-- /.row (nested) -->
                 </div>
                 <!-- /.col-lg-10 -->
